test/error/iface/err7.rzy
// output of sub-component b is not connected

component
  Sub
    signal funcA();
      
    implementation elementary
  end

  Err7
    signal funcA();
      
  implementation composition
    
    component
      a : Sub;
      b : Sub;

    connection
      a.funcA -> funcA;
      
  end

